# temple-bridge

./: .gitignore  ARCHITECTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_DEEPSEEK.md  main.py  middleware.py  pyproject.toml  quick_start.md  server.py  test_governance.py  test_tools.py  verify_mcp_connection.sh
demo/: README.md
docs/: ACTIVATION_GUIDE.md  AUTO_SYSTEM_PROMPT.md  SYSTEM_PROMPT_SETUP.md  TEST_REPORT.md  test_new_model.md
examples/: lmstudio_mcp_config.json
src/temple_bridge/: __init__.py  server.py
tests/: test_full_session.py
